# rust-google-oauth2

./: Cargo.toml  LICENCE.md  README.md
html/: callback.html  index.html
src/: handlers.rs  jwks.rs  main.rs
