[package]
name = "rust-google-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
jsonwebtoken = "8.0"
jwks-client = "0.1.4"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"
tera = "1.15"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
once_cell = "1.17"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
log = "0.4"